--- a/Rudin.true/macros.tex
+++ b/Rudin.true/macros.tex
@@ -18,3 +18,4 @@
 \newcommand{\inB}{\in B}
 \newcommand{\inC}{\in C}
 \newcommand{\inU}{\in U}
+\newcommand{\myref}[2]{\hyperref[#2]{#1\ \ref*{#2}}}
